--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <table cellspacing="20">
       <td>
         <img
-          src="/Html personal site/shivamphoto2-modified.png"
+          src=""
           alt="shivam's personal profile."
           style="width: 150px; height: 150px"
         />
